--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.5.2",
     "react-icons": "^4.8.0",
     "react-lazy-load": "^4.0.1",
     "react-router-dom": "^6.11.0",
